# hello-world-pico-pi

./: CMakeLists.txt  pico-sdk-import.cmake
src/: blink.cpp
